# HOEngine

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  Config.h  LICENSE  Macros.h  README.md
.github/workflows/: ci-pipeline.yml
Assets/TestAssets/TestGltf/Box/glTF-Draco/: Box.gltf
Assets/TestAssets/TestGltf/BoxTextured/glTF/: BoxTextured.gltf
Assets/TestAssets/TestGltf/RiggedFigure/glTF-Draco/: RiggedFigure.gltf
Assets/TestAssets/TestGltf/RiggedFigure/glTF-Embedded/: RiggedFigure.gltf
Assets/TestAssets/TestObj/CubeWithDuplicatedTexture/: cube.mtl
Assets/TestAssets/TestObj/MultipleMesh/: multi_mesh.mtl
Core/: CMakeLists.txt  Config.h  Macros.h
Core/IO/: .clang-tidy  AnimationIR.h  Image.h  MaterialIR.h  MeshIR.h  ModelIR.h  Path.cc  Path.h  ResourceImporter.cc  ResourceImporter.h  ResourceLoader.cc  ResourceLoader.h  ResourceParseFuncs.cc  ResourceParseFuncs.h  ResourceParsingFuncs.cc  ShaderIR.h  SkeletonIR.h  SkinIR.h  TextureIR.h
Core/Log/: LogLevel.h  LogSinkImgui.h  LogSink_imgui.h  Logger.cc  Logger.h
Core/Math/: AABB.cc  AABB.h  Basis2D.cc  Basis2D.h  Basis3D.cc  Basis3D.h  Color128.cc  Color128.h  Color32.cc  Color32.h  Frustum.cc  Frustum.h  InterpFuncs.h  MathDefs.h  MathFuncs.h  Matrix2x2.cc  Matrix2x2.h  Matrix3x3.cc  Matrix3x3.h  Matrix4x4.cc  Matrix4x4.h  Plane.cc  Plane.h  Projection.cc  Projection.h  Quaternion.cc  Quaternion.h  Sphere.cc  Sphere.h  Transform2D.cc  Transform2D.h  Transform3D.cc  Transform3D.h  Vector2.cc  Vector2.h  Vector3.cc  Vector3.h  Vector4.cc  Vector4.h
Core/Templates/: AtomicNumeric.h  FixedArray.h  FixedQueue.h  GlobalPoolIndex.h  ID.h  IDMap.h  LocalPoolIndex.h  ObjectPool.h  UniqueObjectPool.h  WeakLocalPoolIndex.h
Core/Thread/: BinaryRecursiveMutex.h  ConditionVariable.h  JobSystem.h  Mutex.h  Semaphore.h  SpinLock.h  Thread.cc  Thread.h
Core/Time/: GameTimer.h
Engine/: CMakeLists.txt  Engine.cc  Engine.h
EngineApplication/: CMakeLists.txt  IEngineApplication.cc  IEngineApplication.h  IEngineWindow.h
EngineApplication/TestApp/: TestApp.cc  TestApp.h  TestAppMainWindow.cc  TestAppMainWindow.h
EngineApplication/TestApp/UIWindows/: TestAppMainWindow.cc  TestAppMainWindow.h
Lib/: CMakeLists.txt
Lib/glad/include/glad/: glad.h
Lib/glad/src/: glad.c
Main/: CMakeLists.txt  EngineMain.cc  EngineMain.h
Main/Windows/: WinMain.cc
Subsystems/: CMakeLists.txt
Subsystems/Asset/: .clang-tidy  AssetDefs.h  AssetImportFuncs.cc  AssetImportFuncs.h  AssetSystem.cc  AssetSystem.h  Assets.h  MaterialAsset.h  ShaderAsset.h  StaticMeshAsset.h  TextureAsset.h
Subsystems/Rendering/: .clang-tidy  GpuResources.h  IRenderingSystem.cc  IRenderingSystem.h  RenderSync.h
Subsystems/Rendering/GL/: NativeHandlesGL.h  RenderingSystemGL.cc  RenderingSystemGL.h
Subsystems/Rendering/GL/Shaders/: Default.vert  DefaultPBR.frag  DefaultPBRMasked.frag  DefaultPhong.frag  DefaultPhongMasked.frag  DefaultSkyMap.frag  DefaultSkyMap.vert  DefaultUnlit.frag  DefaultUnlitMasked.frag  WorldGizmo.frag  WorldGizmo.vert
Subsystems/UI/: IUIDrawable.cc  IUIDrawable.h  IUIWindow.cc  IUIWindow.h  TitleBarTheme.h  UISystem.cc  UISystem.h
Test/: .clang-format  CmakeLists.txt
Test/Core/: CmakeLists.txt
Test/Core/IO/: CmakeLists.txt  ImageTest.cc  PathTest.cc  ResourceImporterTest.cc  ResourceLoaderTest.cc  ResourceParsingFuncsTest.cc
Test/Core/IO/Assets/TestGltf/BoxVertexColors/glTF/: BoxVertexColors.gltf
Test/Core/IO/Assets/TestGltf/BoxVertexColors/glTF-Embedded/: BoxVertexColors.gltf
Test/Core/IO/Assets/TestObj/Cube/: cube.mtl
Test/Core/Log/: CmakeLists.txt  LoggerTest.cc
Test/Core/Math/: AABBTest.cc  Basis2DTest.cc  Basis3DTest.cc  CmakeLists.txt  Color128Test.cc  Color32Test.cc  FrustumTest.cc  InterpFuncsTest.cc  MathFuncsTest.cc  Matrix2x2Test.cc  Matrix3x3Test.cc  Matrix4x4Test.cc  PlaneTest.cc  ProjectionTest.cc  QuaternionTest.cc  SphereTest.cc  Transform2DTest.cc  Transform3DTest.cc  Vector2Test.cc  Vector3Test.cc  Vector4Test.cc
Test/Core/Templates/: AtomicNumericTest.cc  CmakeLists.txt  GlobalPoolIndexTest.cc  IDMapTest.cc  IDTest.cc  LocalPoolIndexTest.cc  ObjectPoolTest.cc  UniqueObjectPoolTest.cc
Test/Core/Thread/: BinaryRecursiveMutexTest.cc  CmakeLists.txt  ConditionVariableTest.cc  JobSystemTest.cc  MutexTest.cc  SemaphoreTest.cc  SpinLockTest.cc  ThreadTest.cc
Test/Core/ThreadFallback/: BinaryRecursiveMutexFallbackTest.cc  CmakeLists.txt  ConditionVariableFallbackTest.cc  JobSystemFallbackTest.cc  MutexFallbackTest.cc  SemaphoreFallbackTest.cc  SpinLockFallbackTest.cc  ThreadFallbackTest.cc
Test/Core/Time/: CmakeLists.txt  GameTimerTest.cc
